src/objects/FLAC_Centre__c.object
<CustomObject>
    <description>These are FLAC services, rather than FLAC locations. The Linked organisation is the location</description>
    <fields>
        <fullName>CIS_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>CIC manager must belong to an organisation of type CIC</errorMessage>
            <filterItems>
                <field>Contact.Account.Type__c</field>
                <operation>equals</operation>
                <value>CIC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FLAC Centres (CIS Manager)</relationshipLabel>
        <relationshipName>FLAC_Centres1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Management__c</fullName>
        <label>Client Management</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Drop in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact this person for general organisation of this centre</inlineHelpText>
        <label>Admin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admin for FLAC Centres</relationshipLabel>
        <relationshipName>FLAC_Centres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Forms_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact this person for the data collection programme</inlineHelpText>
        <label>Data Collection Forms Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>FLAC Centres (Data Collection Forms Contact)</relationshipLabel>
        <relationshipName>FLAC_Centres_Data_Collection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <inlineHelpText>Main day of the week that the service is held on</inlineHelpText>
        <label>First Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Day_End_Time__c</fullName>
        <label>First Day End Time</label>
        <picklist>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Day_Start_Time__c</fullName>
        <label>First Day Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>For_Appointment_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use only if the client management field is &quot;Appointment only&quot;</inlineHelpText>
        <label>For Appointment Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FLAC Centres (For Appointment Contact)</relationshipLabel>
        <relationshipName>FLAC_Centres_Appointment_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <inlineHelpText>Select how often the service is held on the day selected in First Day</inlineHelpText>
        <label>First Day Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Every Week</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1st in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last in month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_conjunction_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The organisation that coordinates FLAC in this location, if it is different to the host organisation</inlineHelpText>
        <label>In conjunction with</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FLAC Centres</relationshipLabel>
        <relationshipName>FLAC_Coordination</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Info_Notes__c</fullName>
        <label>Info Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Where the service is held</description>
        <inlineHelpText>Select the organisation that hosts the service</inlineHelpText>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FLAC Centres</relationshipLabel>
        <relationshipName>FLAC_Centres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participates_in_Data_Collect_Programme__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this if the centre participates in the Data Collect Programme</inlineHelpText>
        <label>Participates in Data Collect Programme</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reception_provided_by__c</fullName>
        <label>Reception provided by</label>
        <picklist>
            <picklistValues>
                <fullName>FLAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-FLAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rostered_by_FLAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the centre rostered by FLAC or by someone else?</description>
        <label>Rostered by FLAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rostered_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The organisation that rosters the centre</inlineHelpText>
        <label>Rostered by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FLAC Centres (Rostered by)</relationshipLabel>
        <relationshipName>Rostered_FLAC_Centres</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Day_End_Time__c</fullName>
        <label>Second Day End Time</label>
        <picklist>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Day_Frequency__c</fullName>
        <inlineHelpText>Use where the centre is operating on a second day of the week or month</inlineHelpText>
        <label>Second Day Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Every Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th in month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last in month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Day_Start_Time__c</fullName>
        <label>Second Day Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Second_Day__c</fullName>
        <description>Use where the centre is operating on a second day of the week or month</description>
        <inlineHelpText>Use where the centre is operating on a second day of the week or month</inlineHelpText>
        <label>Second Day</label>
        <picklist>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialist_Centre__c</fullName>
        <label>Specialist Centre</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Immigration Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family &amp; Employment Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refugee Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Speaking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf Hear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FLAC Centre</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLAC Centres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>